<?xml version="1.0"?>
<package>
  <name>robot_control</name>
  <version>0.1.0</version>
  <description>Robot controller package</description>

  <maintainer email="ladrians@gmail.com">Luciano Silveira</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
